--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         "moduleResolution": "node",
-        "strict": true
+        "strict": true,
+        "target": "ES5"
     },
     "include": ["**/*.ts"]
 }
