--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "Search Spotify Audio to Visualize",
     "scripts": {
-        "build": "webpack --config ./src/client/webpack.prod.js",
+        "build": "webpack --config ./src/client/webpack.prod.js && webpack --config ./src/server/webpack.prod.js ",
         "dev": "webpack serve --config ./src/client/webpack.dev.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node ./dist/server/server.js"
@@ -27,6 +27,7 @@
         "webpack-merge": "^5.8.0"
     },
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "youtube-dl-exec": "^1.2.4"
     }
 }
