--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "license": "ISC",
     "devDependencies": {
         "@types/dat.gui": "^0.7.5",
+        "@types/dropzone": "^5.7.4",
         "@types/express": "^4.17.7",
         "@types/node": "^13.13.15",
         "@types/three": "^0.130.0",
+        "@types/uuid": "^8.3.1",
         "three": "^0.130.1",
         "ts-loader": "^9.2.3",
         "typescript": "^3.8.3",
@@ -27,7 +29,9 @@
         "webpack-merge": "^5.8.0"
     },
     "dependencies": {
-        "@types/dropzone": "^5.7.4",
-        "express": "^4.17.1"
+        "@types/jsmediatags": "^3.9.3",
+        "express": "^4.17.1",
+        "jsmediatags": "^3.9.7",
+        "uuid": "^8.3.2"
     }
 }
