--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "moduleResolution": "node",
         "strict": true,
-        "target": "ES6"
+        "target": "ES6",
+        "module": "CommonJS"
     },
     "include": ["**/*.ts"]
 }
